Rename site branding to Bill Tracker Hub

--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>BillTracker</title>
-  <meta name="description" content="BillTracker helps users connect financial accounts and track liabilities and payment due dates.">
+  <title>Bill Tracker Hub</title>
+  <meta name="description" content="Bill Tracker Hub helps users connect financial accounts and track liabilities and payment due dates.">
   <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
   <header class="hero">
     <div class="container">
-      <p class="eyebrow">BillTracker</p>
+      <img class="logo-horizontal" src="./assets/logo-horizontal.svg" alt="Bill Tracker Hub logo">
+      <p class="eyebrow">Bill Tracker Hub</p>
       <h1>Liability Tracking With Plaid Connectivity</h1>
       <p class="lead">
-        BillTracker is an iOS application for connecting financial accounts and
+        Bill Tracker Hub is an iOS application for connecting financial accounts and
         viewing liability balances, amounts due, and due-date status.
       </p>
       <div class="actions">
@@ -56,7 +57,7 @@
   </main>
 
   <footer class="footer container">
-    <p>BillTracker</p>
+    <p>Bill Tracker Hub</p>
     <p><a href="./privacy.html">Privacy Policy</a></p>
   </footer>
 </body>
