--- a/privacy.html
+++ b/privacy.html
@@ -3,14 +3,15 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>BillTracker Privacy Policy</title>
-  <meta name="description" content="Privacy Policy for BillTracker iOS app and backend services.">
+  <title>Bill Tracker Hub Privacy Policy</title>
+  <meta name="description" content="Privacy Policy for Bill Tracker Hub iOS app and backend services.">
   <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
   <header class="hero small">
     <div class="container">
-      <p class="eyebrow">BillTracker</p>
+      <img class="logo-mark" src="./assets/logo-mark.svg" alt="Bill Tracker Hub logo mark">
+      <p class="eyebrow">Bill Tracker Hub</p>
       <h1>Privacy Policy</h1>
       <p class="lead">Last updated: February 27, 2026</p>
       <div class="actions">
@@ -23,7 +24,7 @@
     <section class="card">
       <h2>Overview</h2>
       <p>
-        BillTracker helps users view liability information from linked financial
+        Bill Tracker Hub helps users view liability information from linked financial
         accounts. This policy describes what information is processed and how it is used.
       </p>
     </section>
@@ -49,7 +50,7 @@
     <section class="card">
       <h2>Data Sharing</h2>
       <p>
-        BillTracker uses Plaid to facilitate financial data connectivity. Data
+        Bill Tracker Hub uses Plaid to facilitate financial data connectivity. Data
         sharing with institutions and Plaid is governed by user consent and Plaid's platform.
       </p>
     </section>
@@ -85,7 +86,7 @@
   </main>
 
   <footer class="footer container">
-    <p>BillTracker Privacy Policy</p>
+    <p>Bill Tracker Hub Privacy Policy</p>
   </footer>
 </body>
 </html>
